deployment/Armtemplates/deploy01.json
{
    "$schema": "http://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "adminUsername": { "type": "String", "defaultValue": "labadmin" },
        "adminPassword": { "type": "SecureString" },
        "AzureUserName": { "type": "String" },
        "AzurePassword": { "type": "SecureString" },
        "ODLID": { "type": "String" },
        "DeploymentID": { "type": "String" },
        "trainerUserName": { "type": "String", "defaultValue": "trainer" },
        "trainerUserPassword": { "type": "String" },
        "sqlSaPassword": { "type": "SecureString" },
        "sqlDbaPassword": { "type": "SecureString" }
    },
    "variables": {
        "cloudlabsCommon": "[concat(' -AzureUserName ', parameters('AzureUserName'), ' -AzurePassword ', parameters('AzurePassword'), ' -AzureTenantID ', variables('AzureTenantID'), ' -AzureSubscriptionID ', variables('AzureSubscriptionID'), ' -ODLID ', parameters('ODLID'), ' -DeploymentID ', parameters('DeploymentID'))]",
        "Enable-CloudLabsEmbeddedShadow": "[concat(' -vmAdminUsername ', parameters('adminUsername'), ' -vmAdminPassword ', parameters('adminPassword'), ' -trainerUserName ', parameters('trainerUserName'), ' -trainerUserPassword ', parameters('trainerUserPassword'))]",
        "sqlArgs": "[concat(' -SqlSaPassword ', parameters('sqlSaPassword'), ' -SqlDbaPassword ', parameters('sqlDbaPassword'))]",
        "AzureSubscriptionID": "[subscription().subscriptionId]",
        "AzureTenantID": "[subscription().tenantId]",
        "location": "[resourceGroup().location]",
        "winvirtualMachineName": "[concat('vm-sql-', parameters('DeploymentID'))]",
        "networkInterfaceName": "[concat(variables('winvirtualMachineName'), '-nic')]",
        "publicIpAddressName": "[concat('sqlvmip', uniqueString(resourceGroup().id))]",
        "networkSecurityGroupName": "nsg",
        "virtualNetworkName": "vnet",
        "vnetID": "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]",
        "subnetRef": "[concat(variables('vnetID'),'/subnets/','subnet')]",
        "setupScriptUrl": "https://mckinseytemp01.blob.core.windows.net/a8-sqladmin/setup-jumpvm.ps1",
        "seedScriptUrl": "https://mckinseytemp01.blob.core.windows.net/a8-sqladmin/seed-state.ps1",
        "commonFunctionsUrl": "https://experienceazure.blob.core.windows.net/templates/cloudlabs-common/cloudlabs-windows-functions.ps1"
    },
    "resources": [
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2024-05-01",
            "name": "[variables('virtualNetworkName')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "addressSpace": { "addressPrefixes": [ "10.50.0.0/16" ] },
                "subnets": [ { "name": "subnet", "properties": { "addressPrefix": "10.50.0.0/24" } } ]
            }
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2024-05-01",
            "name": "[variables('networkSecurityGroupName')]",
            "location": "[resourceGroup().location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-rdp",
                        "properties": {
                            "priority": 1000,
                            "protocol": "TCP",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "3389"
                        }
                    },
                    {
                        "name": "allow-sql-1433-vnet",
                        "properties": {
                            "priority": 1100,
                            "protocol": "TCP",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "1433"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2024-05-01",
            "name": "[variables('publicIpAddressName')]",
            "location": "[resourceGroup().location]",
            "tags": { "displayName": "SQL VM Public IP" },
            "sku": { "name": "Standard" },
            "properties": {
                "publicIPAllocationMethod": "Static",
                "dnsSettings": { "domainNameLabel": "[variables('publicIPAddressName')]" }
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2024-05-01",
            "name": "[variables('networkInterfaceName')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
                "[concat('Microsoft.Network/publicIpAddresses/', variables('publicIpAddressName'))]",
                "[concat('Microsoft.Network/networkSecurityGroups/', variables('networkSecurityGroupName'))]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "subnet": { "id": "[variables('subnetRef')]" },
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIpAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIpAddresses', variables('publicIpAddressName'))]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('networkSecurityGroupName'))]"
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2024-11-01",
            "name": "[variables('winvirtualMachineName')]",
            "location": "[resourceGroup().location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', variables('networkInterfaceName'))]"
            ],
            "properties": {
                "osProfile": {
                    "computerName": "[variables('winvirtualMachineName')]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]",
                    "windowsConfiguration": { "provisionVmAgent": "true" }
                },
                "hardwareProfile": { "vmSize": "Standard_D2s_v3" },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2022-datacenter-azure-edition",
                        "version": "latest"
                    },
                    "osDisk": {
                        "createOption": "fromImage",
                        "diskSizeGB": 128,
                        "managedDisk": { "storageAccountType": "Standard_LRS" }
                    },
                    "dataDisks": [
                        {
                            "lun": 0,
                            "name": "[concat(variables('winvirtualMachineName'), '-data')]",
                            "createOption": "Empty",
                            "diskSizeGB": 128,
                            "managedDisk": { "storageAccountType": "Premium_LRS" }
                        },
                        {
                            "lun": 1,
                            "name": "[concat(variables('winvirtualMachineName'), '-backup')]",
                            "createOption": "Empty",
                            "diskSizeGB": 64,
                            "managedDisk": { "storageAccountType": "StandardSSD_LRS" }
                        }
                    ]
                },
                "networkProfile": {
                    "networkInterfaces": [
                        { "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('networkInterfaceName'))]" }
                    ]
                }
            },
            "resources": [
                {
                    "type": "extensions",
                    "apiVersion": "2021-04-01",
                    "name": "vmExtension",
                    "location": "[resourceGroup().location]",
                    "dependsOn": [
                        "[concat('Microsoft.Compute/virtualMachines/', variables('winvirtualMachineName'))]"
                    ],
                    "properties": {
                        "publisher": "Microsoft.Compute",
                        "type": "CustomScriptExtension",
                        "typeHandlerVersion": "1.8",
                        "autoUpgradeMinorVersion": "true",
                        "settings": {
                            "fileUris": [
                                "[variables('setupScriptUrl')]",
                                "[variables('seedScriptUrl')]",
                                "[variables('commonFunctionsUrl')]"
                            ],
                            "commandToExecute": "[concat('powershell.exe -ExecutionPolicy Unrestricted -File setup-jumpvm.ps1', variables('cloudlabsCommon'), variables('Enable-CloudLabsEmbeddedShadow'), variables('sqlArgs'))]"
                        }
                    }
                }
            ]
        }
    ],
    "outputs": {
        "DeploymentID": { "type": "String", "value": "[parameters('DeploymentID')]" },
        "region": { "type": "string", "value": "[variables('location')]" },
        "VM Admin Username": { "type": "String", "value": "[parameters('adminUsername')]" },
        "VM Admin Password": { "type": "String", "value": "[parameters('adminPassword')]" },
        "Windows VM RDP DNS Name": {
            "type": "String",
            "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', variables('publicIpAddressName'))).dnsSettings.fqdn]"
        },
        "Windows VM Public IP": {
            "type": "String",
            "value": "[reference(resourceId('Microsoft.Network/publicIPAddresses', variables('publicIpAddressName'))).ipAddress]"
        },
        "RDP Command (Windows)": {
            "type": "String",
            "value": "[concat('mstsc /v:', reference(resourceId('Microsoft.Network/publicIPAddresses', variables('publicIpAddressName'))).dnsSettings.fqdn)]"
        },
        "SQL Server Instance": { "type": "String", "value": "[concat(variables('winvirtualMachineName'), '\\\\MSSQLSERVER (default instance, port 1433)')]" },
        "SQL Sa Password": { "type": "String", "value": "[parameters('sqlSaPassword')]" },
        "SQL DBA Login": { "type": "String", "value": "dba_candidate" },
        "SQL DBA Password": { "type": "String", "value": "[parameters('sqlDbaPassword')]" },
        "AdventureWorks Database": { "type": "String", "value": "AdventureWorks2022" },
        "Trainer Username": { "type": "String", "value": "[parameters('trainerUserName')]" },
        "Trainer Password": { "type": "String", "value": "[parameters('trainerUserPassword')]" },
        "VM Resource Name": { "type": "String", "value": "[variables('winvirtualMachineName')]" }
    }
}
